--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,8 @@
     "bootstrap-hover-dropdown": "~2.1.3",
     "angular-sanitize": "~1.3.15",
     "angular-cookie": "~4.0.6",
-    "angular-route": "~1.3.15"
+    "angular-route": "~1.3.15",
+    "lodash": "~3.6.0",
+    "moment": "~2.9.0"
   }
 }
