--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "angular-new-router": "~0.5.0",
-    "angular": "~1.3.15",
+    "angular": "~1.4.2",
     "jquery": "~2.1.3",
     "bootstrap": "~3.3.4",
     "font-awesome": "~4.3.0",
@@ -15,6 +15,12 @@
     "angular-cookie": "~4.0.6",
     "angular-route": "~1.3.15",
     "lodash": "~3.6.0",
-    "moment": "~2.9.0"
+    "moment": "~2.9.0",
+    "angular-messages": "~1.4.2",
+    "ngRouteNames": "~1.1.7",
+    "angular-formly": "~6.17.0",
+    "angular-formly-templates-bootstrap": "~4.4.1",
+    "angular-redactor": "~1.1.5",
+    "slug": "~0.9.1"
   }
 }
